change results card icons path

--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         <h3>Summary</h3>
         <div class="score red">
             <div class="title">
-                <img src="../assets/images/icon-reaction.svg" class='Reaction-img' alt="Reaction-img"> 
+                <img src="assets/images/icon-reaction.svg" class='Reaction-img' alt="Reaction-img"> 
                 <span class="name">Reaction</span>
             </div>
             <div class="grade">80 <span>&nbsp;/ 100</span></div>
         </div>
         <div class="score orange">
             <div class="title">
-                <img src="../assets/images/icon-memory.svg" class='Memory-img' alt="Memory-img">
+                <img src="assets/images/icon-memory.svg" class='Memory-img' alt="Memory-img">
                 <span class="name">Memory</span>
             </div>
             <div class="grade">92 <span>&nbsp;/ 100</span></div>
         </div>
         <div class="score green">
             <div class="title">
-                <img src="../assets/images/icon-verbal.svg" class='Verbal-img' alt="Verbal-img">
+                <img src="assets/images/icon-verbal.svg" class='Verbal-img' alt="Verbal-img">
                 <span class="name">Verbal</span>
             </div>
             <div class="grade">61 <span>&nbsp;/ 100</span></div>
         </div>
         <div class="score purble">
             <div class="title">
-                <img src="../assets/images/icon-visual.svg" class='Visual-img' alt="Visual-img">
+                <img src="assets/images/icon-visual.svg" class='Visual-img' alt="Visual-img">
                 <span class="name">Visual</span>
             </div>
             <div class="grade">72 <span>&nbsp;/ 100</span></div>
